2009-04-24  Manuel Arostegui <marostegui@artica.es>

	* operation/agentes/status_monitor.php: Fixed bug #2779382

2009-04-24  Esteban Sánchez  <estebans@artica.es>

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Removed local components table
	
	* godmode/servers/manage_recontask_form.php: Added "any" option to
	operating system combo.
	
	* godmode/snmpconsole/snmp_alert.php: Changed alert templates with actions.

2009-04-23  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/graph_viewer.php, godmode/setup/news.php,
	  godmode/agentes/planned_downtime.php,
	  godmode/modules/manage_network_components.php,
	  godmode/modules/manage_nc_groups.php,
	  godmode/reporting/map_builder.php: Fixed strings to make them
	  standard for translation.

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated PO template.

2009-04-22  Manuel Arostegui <marostegui@artica.es>

	* godmode/servers/manage_recontask_form.php: Fixed bug #2777351

2009-04-22  Manuel Arostegui <marostegui@artica.es>

	* godmode/menu.php: Fixed bug #2770383

2009-04-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated PO template.

	* godmode/alerts/configure_alert_template.php: Fixed typos.

2009-04-22  Esteban Sánchez  <estebans@artica.es>

	* pandoradb_data.sql: Use 3.0 for version number
	
	* include/javascript/jquery.pandora.controls.js: Duplicated
	pandoraSelectGroup renamed to pandoraSelectGroupAgent.
	
	* godmode/agentes/massive_config.php,
	godmode/agentes/massive_delete_agents.php,
	godmode/agentes/massive_delete_alerts.php,
	godmode/agentes/massive_delete_modules.php,
	godmode/alerts/alert_compounds.php, godmode/alerts/alert_list.php,
	godmode/reporting/reporting_builder.php: pandoraSelectGroup renamed to
	pandoraSelectGroupAgent.
	